Sandbox for using test frameworks

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,33 @@
+###################
+# Compiled source #
+###################
+target/
 *.class
 
+###################
+# IntelliJ        #
+###################
+*.ipr
+*.iws
+*.iml
+.idea
+
+###################
+# Logs            #
+###################
+*.log
+
+###################
+# OS generated files #
+###################
+.DS_Store?
+ehthumbs.db
+Icon?
+Thumbs.db
+
+###################
 # Package Files #
+###################
 *.jar
 *.war
 *.ear
